--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,11 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+*.csv
+*.xlsx
+*.docx
+*checkpoint.ipynb
+*.json
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
